--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GraphixTrade | Where Creativity Meets Commerce</title>
+    <title>GraphixTrade | Building Brands Through Creative Design</title>
 
     <!-- SEO Meta -->
     <meta name="description" content="GraphixTrade is a creative design and branding agency delivering logos, packaging, and marketing solutions that drive business growth.">
@@ -138,7 +138,7 @@
     <!-- Header -->
     <header>
         <h1>GraphixTrade</h1>
-        <p>Where Creativity Meets Commerce</p>
+        <p>Building Brands Through Creative Design</p>
     </header>
 
     <!-- About -->
