--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
 
     <!-- Header -->
     <header>
+        <img src="G logo.png" alt="GraphixTrade Logo" width="150">
         <h1>GraphixTrade</h1>
         <p>Building Brands Through Creative Design</p>
     </header>
