--- a/index.html
+++ b/index.html
@@ -1,191 +1,272 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GraphixTrade | Building Brands Through Creative Design</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- SEO Meta -->
-    <meta name="description" content="GraphixTrade is a creative design and branding agency delivering logos, packaging, and marketing solutions that drive business growth.">
-    <meta name="keywords" content="Graphic Design, Branding, Logo Design, Packaging Design, Marketing Ads, Creative Agency">
-    <meta name="author" content="GraphixTrade">
+  <title>GraphixTrade | Creative Design & Products</title>
 
-    <!-- Google Font -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <!-- SEO -->
+  <meta name="description" content="GraphixTrade is a creative design agency and product brand. We provide logo design, branding, packaging, ads, and sell quality products via Meesho." />
+  <meta name="keywords" content="GraphixTrade, Graphic Design, Branding, Logo Design, Packaging, Products, Meesho" />
+  <meta name="author" content="GraphixTrade" />
 
-    <style>
-        :root {
-            --brand-color: #F5A623;
-            --white: #FFFFFF;
-            --dark: #1a1a1a;
-        }
+  <!-- Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
 
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Poppins', sans-serif;
-        }
+  <style>
+    :root {
+      --brand: #F5A623;
+      --white: #ffffff;
+      --dark: #1a1a1a;
+    }
 
-        body {
-            background-color: var(--white);
-            color: var(--dark);
-            line-height: 1.6;
-        }
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Poppins', sans-serif;
+    }
 
-        /* Header */
-        header {
-            background-color: var(--brand-color);
-            color: var(--white);
-            padding: 60px 20px;
-            text-align: center;
-        }
+    body {
+      background: var(--white);
+      color: var(--dark);
+      line-height: 1.6;
+    }
 
-        header h1 {
-            font-size: 3rem;
-            font-weight: 700;
-            letter-spacing: 1px;
-        }
+    /* NAVBAR */
+    .navbar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 15px 40px;
+      background: var(--brand);
+      position: sticky;
+      top: 0;
+      z-index: 100;
+    }
 
-        header p {
-            font-size: 1.2rem;
-            margin-top: 10px;
-            opacity: 0.95;
-        }
+    .logo {
+      display: flex;
+      align-items: center;
+      color: var(--white);
+      font-size: 22px;
+      font-weight: 700;
+    }
 
-        /* Sections */
-        section {
-            padding: 70px 20px;
-            max-width: 1100px;
-            margin: auto;
-        }
+    .logo img {
+      height: 40px;
+      margin-right: 10px;
+    }
 
-        section h2 {
-            font-size: 2rem;
-            margin-bottom: 20px;
-            color: var(--brand-color);
-        }
+    nav a {
+      color: var(--white);
+      text-decoration: none;
+      margin-left: 25px;
+      font-weight: 500;
+    }
 
-        section p {
-            font-size: 1rem;
-            max-width: 800px;
-        }
+    nav a:hover {
+      text-decoration: underline;
+    }
 
-        /* Services */
-        .services {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-            gap: 30px;
-            margin-top: 40px;
-        }
+    /* HERO */
+    .hero {
+      background: var(--brand);
+      color: var(--white);
+      text-align: center;
+      padding: 100px 20px;
+    }
 
-        .service-box {
-            border: 2px solid var(--brand-color);
-            padding: 25px;
-            border-radius: 10px;
-            transition: 0.3s ease;
-        }
+    .hero h1 {
+      font-size: 3rem;
+      margin-bottom: 10px;
+    }
 
-        .service-box:hover {
-            background-color: var(--brand-color);
-            color: var(--white);
-        }
+    .hero p {
+      font-size: 1.2rem;
+      max-width: 700px;
+      margin: auto;
+    }
 
-        .service-box h3 {
-            margin-bottom: 10px;
-            font-size: 1.2rem;
-        }
+    /* SECTIONS */
+    section {
+      padding: 80px 20px;
+      max-width: 1100px;
+      margin: auto;
+    }
 
-        /* CTA */
-        .cta {
-            background-color: var(--brand-color);
-            color: var(--white);
-            text-align: center;
-            padding: 60px 20px;
-        }
+    section h2 {
+      font-size: 2.2rem;
+      color: var(--brand);
+      margin-bottom: 20px;
+    }
 
-        .cta h2 {
-            color: var(--white);
-            margin-bottom: 15px;
-        }
+    /* SERVICES */
+    .services {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 30px;
+      margin-top: 40px;
+    }
 
-        .cta p {
-            margin-bottom: 25px;
-        }
+    .service-box {
+      border: 2px solid var(--brand);
+      padding: 25px;
+      border-radius: 12px;
+      transition: 0.3s;
+    }
 
-        .cta a {
-            display: inline-block;
-            text-decoration: none;
-            background-color: var(--white);
-            color: var(--brand-color);
-            padding: 12px 30px;
-            border-radius: 30px;
-            font-weight: 600;
-        }
+    .service-box:hover {
+      background: var(--brand);
+      color: var(--white);
+    }
 
-        /* Footer */
-        footer {
-            background-color: #111;
-            color: #ccc;
-            text-align: center;
-            padding: 20px;
-            font-size: 0.9rem;
-        }
-    </style>
+    /* PRODUCTS */
+    .products {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 30px;
+      margin-top: 40px;
+    }
+
+    .product {
+      border: 1px solid #ddd;
+      padding: 20px;
+      border-radius: 12px;
+      text-align: center;
+    }
+
+    .product img {
+      width: 100%;
+      border-radius: 10px;
+      margin-bottom: 15px;
+    }
+
+    .product a {
+      display: inline-block;
+      margin-top: 10px;
+      background: var(--brand);
+      color: var(--white);
+      padding: 10px 20px;
+      border-radius: 25px;
+      text-decoration: none;
+      font-weight: 600;
+    }
+
+    /* CTA */
+    .cta {
+      background: var(--brand);
+      color: var(--white);
+      text-align: center;
+      padding: 70px 20px;
+    }
+
+    .cta a {
+      background: var(--white);
+      color: var(--brand);
+      padding: 12px 30px;
+      border-radius: 30px;
+      font-weight: 600;
+      text-decoration: none;
+    }
+
+    /* FOOTER */
+    footer {
+      background: #111;
+      color: #ccc;
+      text-align: center;
+      padding: 20px;
+      font-size: 0.9rem;
+    }
+  </style>
 </head>
 <body>
 
-    <!-- Header -->
-    <header>
-        <img src="G logo.png" alt="GraphixTrade Logo" width="150">
-        <h1>GraphixTrade</h1>
-        <p>Building Brands Through Creative Design</p>
-    </header>
-
-    <!-- About -->
-    <section>
-        <h2>About Us</h2>
-        <p>
-            GraphixTrade is a creative design and branding agency focused on building strong visual identities
-            that help businesses grow. We blend creativity with commercial strategy to deliver designs
-            that are not just beautiful, but effective.
-        </p>
-    </section>
-
-    <!-- Services -->
-    <section>
-        <h2>Our Services</h2>
-        <div class="services">
-            <div class="service-box">
-                <h3>Logo & Brand Identity</h3>
-                <p>Professional logos and brand systems that represent your business clearly and confidently.</p>
-            </div>
-            <div class="service-box">
-                <h3>Packaging Design</h3>
-                <p>Attractive and market-ready packaging designs that help products stand out.</p>
-            </div>
-            <div class="service-box">
-                <h3>Marketing & Ads</h3>
-                <p>Creative advertising designs for digital and print marketing campaigns.</p>
-            </div>
-            <div class="service-box">
-                <h3>Creative Solutions</h3>
-                <p>Custom visual solutions tailored to your business goals and audience.</p>
-            </div>
-        </div>
-    </section>
-
-    <!-- CTA -->
-    <div class="cta">
-        <h2>Let’s Build Your Brand</h2>
-        <p>Ready to grow your business with powerful design?</p>
-        <a href="mailto:info@graphixtrade.com">Contact Us</a>
+  <!-- NAVBAR -->
+  <header class="navbar">
+    <div class="logo">
+      <img src="assets/images/logo.png" alt="GraphixTrade Logo">
+      GraphixTrade
     </div>
+    <nav>
+      <a href="#home">Home</a>
+      <a href="#design">Design</a>
+      <a href="#products">Products</a>
+      <a href="#about">About</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
 
-    <!-- Footer -->
-    <footer>
-        © 2026 GraphixTrade. All rights reserved.
-    </footer>
+  <!-- HERO -->
+  <div class="hero" id="home">
+    <h1>Building Brands & Selling Smart</h1>
+    <p>Creative design services and quality products — powered by GraphixTrade.</p>
+  </div>
+
+  <!-- ABOUT -->
+  <section id="about">
+    <h2>About GraphixTrade</h2>
+    <p>
+      GraphixTrade is a creative design and branding agency that also operates as a product-focused brand.
+      We help businesses grow with strong visual identity while selling curated products via Meesho.
+    </p>
+  </section>
+
+  <!-- SERVICES -->
+  <section id="design">
+    <h2>Design Services</h2>
+    <div class="services">
+      <div class="service-box">
+        <h3>Logo & Branding</h3>
+        <p>Strong visual identity for your business.</p>
+      </div>
+      <div class="service-box">
+        <h3>Packaging Design</h3>
+        <p>Market-ready packaging that sells.</p>
+      </div>
+      <div class="service-box">
+        <h3>Ads & Marketing</h3>
+        <p>High-converting creatives for Meta Ads.</p>
+      </div>
+      <div class="service-box">
+        <h3>Creative Solutions</h3>
+        <p>Custom designs tailored to your goals.</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- PRODUCTS -->
+  <section id="products">
+    <h2>Our Products</h2>
+    <div class="products">
+
+      <!-- PRODUCT 1 -->
+      <div class="product">
+        <img src="assets/images/product1.jpg" alt="Product 1">
+        <h3>Product Name</h3>
+        <p>₹499</p>
+        <p>Short product description.</p>
+        <a href="https://meesho.com/YOUR-PRODUCT-LINK" target="_blank">Buy on Meesho</a>
+      </div>
+
+      <!-- ADD MORE PRODUCTS SAME WAY -->
+
+    </div>
+  </section>
+
+  <!-- CTA -->
+  <div class="cta" id="contact">
+    <h2>Work With Us</h2>
+    <p>Need design services or want to explore our products?</p>
+    <a href="mailto:info@graphixtrade.com">Contact Us</a>
+  </div>
+
+  <!-- FOOTER -->
+  <footer>
+    © 2026 GraphixTrade. All rights reserved.
+  </footer>
 
 </body>
 </html>
+
