--- a/index.html
+++ b/index.html
@@ -186,7 +186,8 @@
   <!-- NAVBAR -->
   <header class="navbar">
     <div class="logo">
-      <img src="assets/images/Logo.png" alt="GraphixTrade">
+      <img src="assets/images/Logo1.png" alt="GraphixTrade">
+      Graphixtrade
     </div>
     <nav>
       <a href="#home">Home</a>
