--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 <header>
   <div class="header-container">
     <div class="logo">
-      <img src="Logo1.png" alt="GraphixTrade Logo">
+      <img src="assets/images/Logo1.png" alt="GraphixTrade Logo">
     </div>
     <div class="brand-text">
       <h1>GraphixTrade</h1>
