--- a/index.html
+++ b/index.html
@@ -4,21 +4,24 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>GraphixTrade | Building Brands Through Creative Design</title>
+  <title>GraphixTrade | Creative Design & Product Brand</title>
 
   <!-- SEO -->
-  <meta name="description" content="GraphixTrade is a creative design and branding agency offering logo design, packaging, marketing creatives, and curated quality products." />
-  <meta name="keywords" content="Graphic Design, Branding Agency, Packaging Design, Creative Agency, Products Brand" />
+  <meta name="description" content="GraphixTrade is a creative design and branding agency offering impactful design services and curated quality products." />
+  <meta name="keywords" content="Creative Agency, Graphic Design, Branding, Packaging Design" />
   <meta name="author" content="GraphixTrade" />
 
-  <!-- Font -->
+  <!-- Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+
+  <!-- AOS Animation -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
   <style>
     :root {
       --brand: #F5A623;
-      --dark: #1a1a1a;
-      --white: #ffffff;
+      --dark: #111;
+      --white: #fff;
     }
 
     * {
@@ -34,67 +37,111 @@
       line-height: 1.6;
     }
 
-    /* ===== HEADER ===== */
-    header {
-      background: var(--brand);
-      color: var(--white);
-      padding: 40px 20px;
-    }
-
-    .header-container {
-      max-width: 1100px;
-      margin: auto;
+    /* ===== HERO ===== */
+    .hero {
+      min-height: 100vh;
+      background: linear-gradient(135deg, #F5A623, #ffb347);
       display: flex;
       align-items: center;
+      justify-content: center;
+      padding: 40px 20px;
+      text-align: center;
+      color: white;
+    }
+
+    .hero-content {
+      max-width: 900px;
+    }
+
+    .hero img {
+      width: 120px;
+      margin-bottom: 25px;
+    }
+
+    .hero h1 {
+      font-size: 3.2rem;
+      font-weight: 700;
+      margin-bottom: 15px;
+      line-height: 1.2;
+    }
+
+    .hero p {
+      font-size: 1.2rem;
+      opacity: 0.95;
+      margin-bottom: 35px;
+    }
+
+    .hero-buttons {
+      display: flex;
       gap: 20px;
+      justify-content: center;
       flex-wrap: wrap;
     }
 
-    .logo img {
-      width: 120px;
+    .btn {
+      padding: 14px 34px;
+      border-radius: 40px;
+      font-weight: 600;
+      text-decoration: none;
+      transition: 0.3s ease;
+      font-size: 0.95rem;
     }
 
-    .brand-text h1 {
-      font-size: 2.5rem;
-      font-weight: 700;
+    .btn-primary {
+      background: white;
+      color: var(--brand);
     }
 
-    .brand-text p {
-      font-size: 1.1rem;
-      opacity: 0.95;
+    .btn-primary:hover {
+      transform: translateY(-3px);
+    }
+
+    .btn-outline {
+      border: 2px solid white;
+      color: white;
+    }
+
+    .btn-outline:hover {
+      background: white;
+      color: var(--brand);
     }
 
     /* ===== SECTION ===== */
     section {
       max-width: 1100px;
       margin: auto;
-      padding: 60px 20px;
+      padding: 80px 20px;
     }
 
     section h2 {
+      font-size: 2.2rem;
       color: var(--brand);
-      font-size: 2rem;
       margin-bottom: 15px;
     }
 
     section p {
-      max-width: 850px;
+      max-width: 800px;
       font-size: 1rem;
     }
 
     /* ===== SERVICES ===== */
     .services {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 25px;
-      margin-top: 35px;
+      grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
+      gap: 30px;
+      margin-top: 50px;
     }
 
     .service-box {
-      border: 2px solid var(--brand);
-      padding: 25px;
-      border-radius: 12px;
-      transition: 0.3s;
+      padding: 30px;
+      border-radius: 16px;
+      background: #fff;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.08);
+      transition: 0.3s ease;
+    }
+
+    .service-box:hover {
+      transform: translateY(-8px);
     }
 
     .service-box h3 {
@@ -102,99 +149,23 @@
       font-size: 1.2rem;
     }
 
-    .service-box:hover {
-      background: var(--brand);
-      color: var(--white);
-    }
-
-    /* ===== PRODUCTS ===== */
-    .products {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 30px;
-      margin-top: 35px;
-    }
-
-    .product-card {
-      border: 1px solid #ddd;
-      border-radius: 14px;
-      overflow: hidden;
-      transition: 0.3s;
-    }
-
-    .product-card img {
-      width: 100%;
-      height: 220px;
-      object-fit: cover;
-    }
-
-    .product-info {
-      padding: 18px;
-    }
-
-    .product-info h3 {
-      font-size: 1.1rem;
-      margin-bottom: 6px;
-    }
-
-    .product-info p {
-      font-size: 0.95rem;
-      margin-bottom: 12px;
-    }
-
-    .buy-btn {
-      display: inline-block;
-      padding: 10px 22px;
-      background: var(--brand);
-      color: var(--white);
-      text-decoration: none;
-      border-radius: 25px;
-      font-weight: 600;
-      font-size: 0.9rem;
-    }
-
-    /* ===== CTA ===== */
-    .cta {
-      background: var(--brand);
-      color: var(--white);
-      text-align: center;
-      padding: 60px 20px;
-    }
-
-    .cta h2 {
-      font-size: 2rem;
-      margin-bottom: 10px;
-    }
-
-    .cta a {
-      display: inline-block;
-      margin-top: 20px;
-      background: var(--white);
-      color: var(--brand);
-      padding: 12px 30px;
-      border-radius: 30px;
-      font-weight: 600;
-      text-decoration: none;
-    }
-
     /* ===== FOOTER ===== */
     footer {
       background: #111;
       color: #ccc;
       text-align: center;
-      padding: 18px;
+      padding: 20px;
       font-size: 0.9rem;
     }
 
     /* ===== MOBILE ===== */
     @media (max-width: 768px) {
-      .header-container {
-        flex-direction: column;
-        text-align: center;
+      .hero h1 {
+        font-size: 2.3rem;
       }
 
-      .brand-text h1 {
-        font-size: 2rem;
+      .hero p {
+        font-size: 1.05rem;
       }
     }
   </style>
@@ -202,88 +173,76 @@
 
 <body>
 
-<!-- HEADER -->
-<header>
-  <div class="header-container">
-    <div class="logo">
-      <img src="assets/images/Logo1.png" alt="GraphixTrade Logo">
-    </div>
-    <div class="brand-text">
-      <h1>GraphixTrade</h1>
-      <p>Building Brands Through Creative Design</p>
+<!-- HERO -->
+<div class="hero">
+  <div class="hero-content">
+    <img src="logo.png" alt="GraphixTrade Logo" data-aos="zoom-in">
+
+    <h1 data-aos="fade-up" data-aos-delay="200">
+      Design That Speaks.<br>Products That Sell.
+    </h1>
+
+    <p data-aos="fade-up" data-aos-delay="350">
+      A creative design and product brand focused on building strong identities and meaningful value.
+    </p>
+
+    <div class="hero-buttons" data-aos="fade-up" data-aos-delay="500">
+      <a href="#services" class="btn btn-primary">Our Services</a>
+      <a href="#products" class="btn btn-outline">View Products</a>
     </div>
   </div>
-</header>
+</div>
 
 <!-- ABOUT -->
-<section>
+<section data-aos="fade-up">
   <h2>About GraphixTrade</h2>
   <p>
-    GraphixTrade is a creative design and branding agency focused on building strong
-    visual identities and market-ready solutions. Alongside our design services,
-    we develop and present a curated range of quality products shaped by the same
-    creative standards.
+    GraphixTrade is a creative design and branding agency that blends strategy,
+    creativity, and execution. Alongside our services, we also develop curated
+    products driven by the same design-first mindset.
   </p>
 </section>
 
 <!-- SERVICES -->
-<section>
-  <h2>Our Services</h2>
+<section id="services">
+  <h2 data-aos="fade-up">What We Do</h2>
+
   <div class="services">
-    <div class="service-box">
-      <h3>Logo & Branding</h3>
-      <p>Distinctive brand identities that build trust and recognition.</p>
+    <div class="service-box" data-aos="fade-up">
+      <h3>Brand Identity</h3>
+      <p>Logos and visual systems that define and elevate brands.</p>
     </div>
-    <div class="service-box">
+
+    <div class="service-box" data-aos="fade-up" data-aos-delay="100">
       <h3>Packaging Design</h3>
-      <p>Professional packaging designed for real market impact.</p>
+      <p>Packaging crafted to stand out and sell confidently.</p>
     </div>
-    <div class="service-box">
+
+    <div class="service-box" data-aos="fade-up" data-aos-delay="200">
       <h3>Marketing Creatives</h3>
-      <p>High-performing creatives for ads and promotions.</p>
+      <p>Ad creatives designed to convert and connect.</p>
     </div>
-    <div class="service-box">
-      <h3>Custom Design</h3>
-      <p>Tailored creative solutions aligned with business goals.</p>
+
+    <div class="service-box" data-aos="fade-up" data-aos-delay="300">
+      <h3>Custom Solutions</h3>
+      <p>Tailored creative solutions for growing businesses.</p>
     </div>
   </div>
 </section>
-
-<!-- PRODUCTS -->
-<section>
-  <h2>Featured Products</h2>
-  <div class="products">
-    <div class="product-card">
-      <img src="product1.jpg" alt="Product 1">
-      <div class="product-info">
-        <h3>Product Name One</h3>
-        <p>Quality product designed with care and creativity.</p>
-        <a href="#" class="buy-btn" target="_blank">Buy Now</a>
-      </div>
-    </div>
-
-    <div class="product-card">
-      <img src="product2.jpg" alt="Product 2">
-      <div class="product-info">
-        <h3>Product Name Two</h3>
-        <p>Curated product offering everyday value.</p>
-        <a href="#" class="buy-btn" target="_blank">Buy Now</a>
-      </div>
-    </div>
-  </div>
-</section>
-
-<!-- CTA -->
-<div class="cta">
-  <h2>Let’s Build Something Valuable</h2>
-  <p>From branding to products, we create value that connects.</p>
-  <a href="mailto:info@graphixtrade.com">Contact Us</a>
-</div>
 
 <!-- FOOTER -->
 <footer>
   © 2026 GraphixTrade. All rights reserved.
 </footer>
+
+<!-- AOS SCRIPT -->
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init({
+    duration: 1000,
+    once: true
+  });
+</script>
 
 </body>
 </html>
