--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 <!-- HERO -->
 <div class="hero">
   <div class="hero-content">
-    <img src="logo.png" alt="GraphixTrade Logo" data-aos="zoom-in">
+    <img src="assets/images/Logo1.png" alt="GraphixTrade Logo" data-aos="zoom-in">
 
     <h1 data-aos="fade-up" data-aos-delay="200">
       Design That Speaks.<br>Products That Sell.
