--- a/index.html
+++ b/index.html
@@ -1,112 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>GraphixTrade | Creative Digital Agency</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background: #0f172a;
-            color: #fff;
-        }
-        header {
-            padding: 60px 20px;
-            text-align: center;
-            background: linear-gradient(135deg, #6366f1, #22d3ee);
-        }
-        header h1 {
-            font-size: 42px;
-            margin-bottom: 10px;
-        }
-        header p {
-            font-size: 18px;
-        }
-        section {
-            padding: 60px 20px;
-            max-width: 1100px;
-            margin: auto;
-        }
-        h2 {
-            color: #38bdf8;
-        }
-        .services, .portfolio {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 20px;
-        }
-        .box {
-            background: #1e293b;
-            padding: 20px;
-            border-radius: 10px;
-        }
-        footer {
-            text-align: center;
-            padding: 20px;
-            background: #020617;
-        }
-        a {
-            color: #38bdf8;
-            text-decoration: none;
-        }
-        .btn {
-            display: inline-block;
-            margin-top: 20px;
-            padding: 12px 25px;
-            background: #38bdf8;
-            color: #000;
-            border-radius: 25px;
-            font-weight: bold;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>GraphixTrade | Creative Graphic Design Agency</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
 
 <header>
-    <h1>GraphixTrade</h1>
-    <p>Creative Digital Agency for Modern Brands</p>
-    <a href="#contact" class="btn">Contact Us</a>
+  <div class="nav">
+    <img src="assets/images/logo.png" alt="GraphixTrade Logo">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="#">Services</a></li>
+      <li><a href="#">Portfolio</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </div>
 </header>
 
-<section>
-    <h2>About Us</h2>
-    <p>
-        GraphixTrade is a creative digital agency providing branding, website design,
-        and digital marketing solutions for businesses worldwide.
-    </p>
-</section>
+<div class="hero">
+  <div>
+    <h1>We Design <span>Bold Brands</span><br>That Get Clients</h1>
+    <a class="btn" href="#">View Portfolio</a>
+  </div>
+</div>
 
 <section>
-    <h2>Our Services</h2>
-    <div class="services">
-        <div class="box">🎨 Graphic Design</div>
-        <div class="box">💻 Website Design</div>
-        <div class="box">📱 Social Media Marketing</div>
-        <div class="box">🚀 Brand Strategy</div>
-    </div>
-</section>
-
-<section>
-    <h2>Portfolio</h2>
-    <div class="portfolio">
-        <div class="box">Project One</div>
-        <div class="box">Project Two</div>
-        <div class="box">Project Three</div>
-    </div>
-</section>
-
-<section id="contact">
-    <h2>Contact Us</h2>
-    <p>Email: <a href="mailto:pankajhada3024@gmail.com">info@graphixtrade.com</a></p>
-    <p>WhatsApp: <a href="https://wa.me/918982548698">Chat on WhatsApp</a></p>
+  <h2>Our Services</h2>
+  <div class="grid">
+    <div class="card">Brand Identity</div>
+    <div class="card">Logo Design</div>
+    <div class="card">Social Media Creatives</div>
+    <div class="card">Marketing Graphics</div>
+  </div>
 </section>
 
 <footer>
-    <p>© 2026 GraphixTrade. All Rights Reserved.</p>
+  © 2026 GraphixTrade
 </footer>
 
+<script src="assets/js/main.js"></script>
 </body>
 </html>
