Update logo image and footer text

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <header>
   <div class="nav">
-    <img src="assets/images/logo.png" alt="GraphixTrade Logo">
+    <img src="assets/images/whitelogo.png" alt="GraphixTrade Logo">
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="#">Services</a></li>
@@ -39,7 +39,7 @@
 </section>
 
 <footer>
-  © 2026 GraphixTrade
+  © 2026 GraphixTrade.com
 </footer>
 
 <script src="assets/js/main.js"></script>
