--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <header>
   <div class="nav">
-    <img src="assets/images/whitelogo.png" alt="GraphixTrade">
+    <img src="assets/images/whitelogo.png" alt="GraphixTrade Logo">
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="#">Services</a></li>
