--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <header>
   <div class="nav">
     <img src="assets/images/whitelogo.png" alt="GraphixTrade Logo">
+     <span class="brand-name">GraphixTrade</span>
+  </div>
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="#">Services</a></li>
@@ -31,7 +33,7 @@
 <section>
   <h2>Our Services</h2>
   <div class="grid">
-    <div class="card">Brand Identity</div>
+    <div class="card">Packaging Design</div>
     <div class="card">Logo Design</div>
     <div class="card">Social Media Creatives</div>
     <div class="card">Marketing Graphics</div>
