--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div class="nav">
     <img src="assets/images/whitelogo.png" alt="GraphixTrade Logo">
      <span class="brand-name">GraphixTrade</span>
-    <ul>
+<div>
       <li><a href="index.html">Home</a></li>
       <li><a href="#">Services</a></li>
       <li><a href="#">Portfolio</a></li>
