--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 <body>
 
 <header>
-  <div class="nav">
-    <img src="assets/images/whitelogo.png" alt="GraphixTrade Logo">
-     <span class="brand-name">GraphixTrade</span>
-<div>
+  <div class="brand">
+  <img src="assets/images/whitelogo.png" alt="GraphixTrade Logo">
+  <span class="brand-name">GraphixTrade</span>
+</div>
+
       <li><a href="index.html">Home</a></li>
       <li><a href="#">Services</a></li>
       <li><a href="#">Portfolio</a></li>
