Reorganize header structure in index.html

--- a/index.html
+++ b/index.html
@@ -10,16 +10,20 @@
 <body>
 
 <header>
-  <div class="brand">
-  <img src="assets/images/whitelogo.png" alt="GraphixTrade Logo">
-  <span class="brand-name">GraphixTrade</span>
-</div>
+  <div class="nav">
 
+    <div class="brand">
+      <img src="assets/images/whitelogo.png" alt="GraphixTrade Logo">
+      <span class="brand-name">GraphixTrade</span>
+    </div>
+
+    <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="#">Services</a></li>
       <li><a href="#">Portfolio</a></li>
       <li><a href="#">Contact</a></li>
     </ul>
+
   </div>
 </header>
 
