--- a/index.html
+++ b/index.html
@@ -51,5 +51,14 @@
 </footer>
 
 <script src="assets/js/main.js"></script>
+
+<script>
+  function toggleMenu() {
+    document.querySelector('.nav-links').classList.toggle('active');
+  }
+</script>
+
 </body>
 </html>
+
+
