--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
       <img src="assets/images/whitelogo.png" alt="GraphixTrade Logo">
       <span class="brand-name">GraphixTrade</span>
     </div>
-    
+
     <div class="menu-toggle" onclick="toggleMenu()">☰</div>
-    
-    <ul>
+
+    <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
       <li><a href="#">Services</a></li>
       <li><a href="#">Portfolio</a></li>
